--- a/app/views/actor_templates/show.html.erb
+++ b/app/views/actor_templates/show.html.erb
@@ -125,19 +125,13 @@
     <th>
     </th>
   </tr>
-
-  <% a_id = @the_actor.id %>
-
-  <% matching_characters = Character.where({ :actor_id => a_id }) %>
+  <% matching_characters = @the_actor.characters %>
 
   <% matching_characters.each do |a_character| %>
-    <% m_id = a_character.movie_id %>
 
-    <% matching_movies = Movie.where({ :id => m_id }) %>
-
-    <% the_movie = matching_movies.at(0) %>
-
-    <tr>
+  <% the_movie = a_character.movie %>
+  
+     <tr>
       <td>
         <%= the_movie.title %>
       </td>
@@ -147,13 +141,7 @@
       </td>
 
       <td>
-        <% d_id = the_movie.director_id %>
-        
-        <% matching_directors = Director.where({ :id => d_id }) %>
-        
-        <% the_director = matching_directors.at(0) %>
-
-        <%= the_director.name %>
+        <% the_director = the_movie.director %>
       </td>
 
       <td>
